# VQNET2.0-tutorial

./: .gitignore  .mcp.json  2026-03-11_12-00-00_NN_new_layers_MCP_implementation_progress.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  rst_to_mcp.py  simple_mcp_server.py  test_mcp_server.py  vqnet_all_tools.json
source/: conf.py  index.rst
source/rst/: CHANGELOG.rst  FAQ.rst  QTensor.rst  install.rst  llm.rst  nn.rst  qml_demo.rst  qnn.rst  qnn_pq3.rst  torch_api.rst  vqc.rst  vqnet_dist.rst
tests/: test_all_tools.py  test_mcp_demo_code.py  test_mcp_fix.py  test_new_interfaces.py  test_new_vqc_expansion.py  test_qnn_pq3_expansion.py  test_qtensor_functions_batch2.py  test_qtensor_implementations.py  test_qtensor_mcp.py  test_tool_search.py  test_torch_mcp.py  test_vqc_high_priority.py  test_vqc_i_functional.py  test_vqc_identity_gate.py  test_vqc_interfaces.py  test_vqc_s_gate.py  test_vqc_t_gate.py
vqnet_mcp_server/: __init__.py  server.py  vqnet_all_tools.json
