[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vqnet-mcp-server"
version = "0.2.0"
description = "VQNET Quantum ML MCP Server - Provides 318+ VQNET 2.0 API interfaces via Model Context Protocol for Claude Code"
requires-python = ">=3.8"
license = "MIT"
authors = [
  {name = "VQNET Developers", email = "dev@vqnet.org"}
]
keywords = ["vqnet", "quantum", "machine-learning", "mcp", "model-context-protocol", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # VQNET 需要用户自行安装，这里不强制依赖
]

readme = "README.md"

[project.scripts]
vqnet-mcp = "vqnet_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/vqnet/vqnet-mcp-server"
Documentation = "https://vqnet.org/docs"

[tool.setuptools]
packages = ["vqnet_mcp_server"]

[tool.setuptools.package-data]
"vqnet_mcp_server" = ["*.json"]
